guest/member new buttons // header border // use layout for new topic // fixed alignment problem on different button texts

--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -4,7 +4,7 @@
   font-size: 12px;
   display: inline-block;
   border-radius: 3px;
-  padding: 12px 12px;
+  padding: 13px 24px;
   user-select: none;
   cursor: pointer;
   outline: none;
@@ -20,6 +20,11 @@ a.btn {
   color: var(--color-pri);
   background-color: var(--bg-pri);
   border: var(--border-pri);
+}
+.btn.create {
+  color: var(--color-create);
+  background-color: var(--bg-create);
+  border: var(--border-create);
 }
 .btn.disabled {
   cursor: not-allowed;
