--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,7 +1,25 @@
 .header {
   background-color: white;
   padding: 15px 0;
-  margin-bottom:20px;
+  margin-bottom: 40px;
+}
+
+.header:before {
+  content: "";
+  background: #dddddd;
+  height: 0.5px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 75px;
+}
+
+.buttons, .logo {
+  width: 15%;
+}
+
+.logo {
+  text-align: right;
 }
 
 
@@ -9,6 +27,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  margin-left: 5px;
 }
 
 .searchBox input {
@@ -19,7 +38,7 @@
   font: normal 14px Roboto, sans-serif;
   background: url(/images/icons/search.png) 98% 50% no-repeat;
   border: 1px solid #ddd;
-  padding: 11px 18px;
+  padding: 10px 18px;
   outline: none;
 }
 .searchBox input::placeholder {
@@ -33,8 +52,6 @@
 .searchBox :global(.ais-SearchBox-reset) {
   display: none;
 }
-
-
 .create{
   display:none;
 }
@@ -47,7 +64,10 @@
   .create{
     display:block;
   }
-  .searchBox{
-    margin: 0 10px 0 20px;
+}
+
+@media screen and (max-width: 1100px) {
+  .logo, .buttons {
+    width: unset;
   }
 }
